# wizard

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
ci/: Dockerfile  Dockerfile_frontend  docker-compose-prod.yaml  docker-compose.yaml  nginx.conf
ci/jenkins/: docker_build_ub1.jenkins
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/app/: App.jsx  main.jsx  routes.jsx
frontend/src/components/: ChargeCertificateModal.css  ChargeCertificateModal.jsx  SendTelegramForm.jsx  SendTelegramForm.module.css
frontend/src/components/CertificateFormModal/: CertificateFormModal.jsx  CertificateFormModal.module.css
frontend/src/components/ui/: Modal.jsx  (+1 more)
frontend/src/context/: AuthContext.jsx
frontend/src/helpers/: ApiClient.js  PublicApiClient.js  tokenStorage.js
frontend/src/hooks/: useApi.js  useAuth.js  useCertificate.js
frontend/src/services/: auth.service.js  certificates.service.js
frontend/src/utils/: guards.jsx
src/: alembic.ini  app.py  dependencies.py  main_schemas.py  routers.py  run.py  settings.py
src/core/: helpers.py  simple_cache.py  workers.py
src/database/: session.py
src/database/migrations/: env.py
src/database/models/: __init__.py  certificates.py  transactions.py  users.py
src/scripts/: create_user.py  status_checker.py
src/web/auth/: refresh_token.py
src/web/certificates/: filters.py  routers.py  schemas.py  services.py
src/web/users/: filters.py  routers.py  schemas.py  users.py
src/workers/: sms_worker.py  telegram_worker.py
(+16 files in other folders)
